--- a/weather_Server/package.json
+++ b/weather_Server/package.json
@@ -5,17 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node weather_server",
-    "dev": "nodemon weather_server"
-
+    "start": "node server",
+    "dev": "nodemon server"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "swagger-ui-express": "^5.0.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.1"
   }
 }
